[package]
name = "ecosystem"
version = "0.1.0"
authors = ["Redox Rust <redox-rust@hotmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.63"

[dev-dependencies]
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
