[package]
name = "ecosystem"
version = "0.1.0"
authors = ["Redox Rust <redox-rust@hotmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.63"

[dev-dependencies]
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
opentelemetry = "0.24.0"
opentelemetry-otlp = { version = "0.17.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
tracing-opentelemetry = "0.25.0"
chrono = { version = "0.4.38", features = ["serde"] }
derive_builder = "0.20.0"
derive_more = { version = "1.0.0", features = [  "add", "display", "from", "into"] }
serde = { version = "1.0.209", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
serde_with = "3.9.0"
base64 = "0.22.1"
http = "1.1.0"
chacha20poly1305 = "0.10.1"
bytes = "1.7.1"
blake3 = "1.5.4"
futures = "0.3.30"
tokio-util = { version = "0.7.11", features = ["codec"] }
loom = "0.7.2"
tokio-stream = "0.1.15"
dashmap = "6.0.1"
console-subscriber = "0.4.0"
